--- a/app/pages/promptConfiguration.html
+++ b/app/pages/promptConfiguration.html
@@ -20,9 +20,9 @@
         <div class="jumbotron">
             </br></br>
             <img alt="PrompTeX logo" title="Review and go logo" class="logo" src="../images/32.png">
-            <h2 class="title">AnnotateGPT Prompt Configuration</h2>
+            <h2 class="title">PrompTeX Prompt Configuration</h2>
             <div class="card">
-                <div class="card-header card-header bg-dark text-white">Criterion-based prompts</div>
+                <div class="card-header card-header bg-dark text-white">Improvement prompts</div>
                 <div class="card-body">
                     <div id="annotatePromptContainer" class="Prompt-Configuration">
                         <label>Configure your <b>Annotate Prompt</b> here. Remember, only the text before "The format should be as follows:" is editable:</label>
@@ -37,7 +37,62 @@
                         </div>
                     </div>
                 </div >
-            </div>
+                <div class="card-header card-header bg-dark text-white">Consistent prompts</div>
+                <div class="card-body">
+                    <div id="newSectionPromptContainer" class="Prompt-Configuration">
+                        <label>Configure your <b>Consistent new section Prompt</b> here. Remember, only the text before "The format should be as follows:" is editable:</label>
+                        <div class="form-check">
+                            <br>
+                            <textarea id="newSectionPrompt" class="promptTextArea" rows="10"></textarea>
+                            <div id="newSectionPromptStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                            <br><br>
+                            <button id="newSectionPromptButton" class="savePromptButtonClass btn btn-secondary">Get default prompt</button>
+                            <button id="newSectionPromptSaveButton" class="savePromptButtonClass btn btn-secondary">Save prompt</button>
+                            <label id="newSectionPromptMessage"></label>
+                        </div>
+                    </div>
+                    <hr>
+                    <div id="deletedSectionPromptContainer" class="Prompt-Configuration">
+                        <label>Configure your <b>Consistent deleted section Prompt</b> here. Remember, only the text before "The format should be as follows:" is editable:</label>
+                        <div class="form-check">
+                            <br>
+                            <textarea id="deletedSectionPrompt" class="promptTextArea" rows="10"></textarea>
+                            <div id="deletedSectionPromptStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                            <br><br>
+                            <button id="deletedSectionPromptButton" class="savePromptButtonClass btn btn-secondary">Get default prompt</button>
+                            <button id="deletedSectionPromptSaveButton" class="savePromptButtonClass btn btn-secondary">Save prompt</button>
+                            <label id="deletedSectionPromptMessage"></label>
+                        </div>
+                    </div>
+                    <hr>
+                    <div id="modifiedSectionPromptContainer" class="Prompt-Configuration">
+                        <label>Configure your <b>Consistent modified section Prompt</b> here. Remember, only the text before "The format should be as follows:" is editable:</label>
+                        <div class="form-check">
+                            <br>
+                            <textarea id="modifiedSectionPrompt" class="promptTextArea" rows="10"></textarea>
+                            <div id="modifiedSectionPromptStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                            <br><br>
+                            <button id="modifiedSectionPromptButton" class="savePromptButtonClass btn btn-secondary">Get default prompt</button>
+                            <button id="modifiedSectionPromptSaveButton" class="savePromptButtonClass btn btn-secondary">Save prompt</button>
+                            <label id="modifiedSectionPromptMessage"></label>
+                        </div>
+                    </div>
+                    <hr>
+                    <div id="createTODOPromptContainer" class="Prompt-Configuration">
+                        <label>Configure your <b>TODO task creator prompt</b> here. Remember, only the text before "The format should be as follows:" is editable:</label>
+                        <div class="form-check">
+                            <br>
+                            <textarea id="createTODOPrompt" class="promptTextArea" rows="10"></textarea>
+                            <div id="createTODOPromptStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                            <br><br>
+                            <button id="createTODOPromptButton" class="savePromptButtonClass btn btn-secondary">Get default prompt</button>
+                            <button id="createTODOPromptSaveButton" class="savePromptButtonClass btn btn-secondary">Save prompt</button>
+                            <label id="createTODOPromptMessage"></label>
+                        </div>
+                    </div>
+                </div >
+            </div >
+        </div>
         </div>
     </div>
 </div>
