--- a/app/pages/promptConfiguration.html
+++ b/app/pages/promptConfiguration.html
@@ -20,6 +20,84 @@
         <div class="jumbotron">
             </br></br>
             <img alt="PrompTeX logo" title="Review and go logo" class="logo" src="../images/32.png">
+            <h2 class="title">Role Configuration</h2>
+            <div class="card">
+                <div class="card-header card-header bg-dark text-white">Validate</div>
+                <div class="card-body">
+                    <div id="validatorContainer" class="Prompt-Configuration">
+                        <label>Configure your <b>Validate</b> definition here:</label>
+                        <div class="form-check">
+                            <br>
+                            <textarea id="validator" class="promptTextArea" rows="10"></textarea>
+                            <div id="validatorPromptStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                            <br><br>
+                            <button id="validatorButton" class="savePromptButtonClass btn btn-secondary">Get default definition</button>
+                            <button id="validatorSaveButton" class="savePromptButtonClass btn btn-secondary">Save definition</button>
+                            <label id="validatorMessage"></label>
+                        </div>
+                    </div>
+                </div >
+                <div class="card-header card-header bg-dark text-white">Enhance</div>
+                <div class="card-body">
+                    <div id="enhancerContainer" class="Prompt-Configuration">
+                        <label>Configure your <b>Enhance</b> definition here:</label>
+                        <div class="form-check">
+                            <br>
+                            <textarea id="enhancer" class="promptTextArea" rows="10"></textarea>
+                            <div id="enhancerStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                            <br><br>
+                            <button id="enhancerButton" class="savePromptButtonClass btn btn-secondary">Get default definition</button>
+                            <button id="enhancerSaveButton" class="savePromptButtonClass btn btn-secondary">Save definition</button>
+                            <label id="enhancerMessage"></label>
+                        </div>
+                    </div>
+                </div >
+                <div class="card-header card-header bg-dark text-white">Gap filling</div>
+                <div class="card-body">
+                    <div id="gapFillerContainer" class="Prompt-Configuration">
+                        <label>Configure your <b>Gap filling</b> definition here:</label>
+                        <div class="form-check">
+                            <br>
+                            <textarea id="gapFiller" class="promptTextArea" rows="10"></textarea>
+                            <div id="gapFillerStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                            <br><br>
+                            <button id="gapFillerButton" class="savePromptButtonClass btn btn-secondary">Get default definition</button>
+                            <button id="gapFillerSaveButton" class="savePromptButtonClass btn btn-secondary">Save definition</button>
+                            <label id="gapFillerMessage"></label>
+                        </div>
+                    </div>
+                </div >
+                <div class="card-header card-header bg-dark text-white">Alternatives</div>
+                <div class="card-body">
+                    <div id="alternativeProviderContainer" class="Prompt-Configuration">
+                        <label>Configure your <b>Alternatives</b> definition here:</label>
+                        <div class="form-check">
+                            <br>
+                            <textarea id="alternativeProvider" class="promptTextArea" rows="10"></textarea>
+                            <div id="alternativeProviderStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                            <br><br>
+                            <button id="alternativeProviderButton" class="savePromptButtonClass btn btn-secondary">Get default definition</button>
+                            <button id="alternativeProviderSaveButton" class="savePromptButtonClass btn btn-secondary">Save definition</button>
+                            <label id="alternativeProviderMessage"></label>
+                        </div>
+                    </div>
+                </div >
+                <div class="card-header card-header bg-dark text-white">Unify</div>
+                <div class="card-body">
+                    <div id="unityBuilderContainer" class="Prompt-Configuration">
+                        <label>Configure your <b>Unify</b> definition here:</label>
+                        <div class="form-check">
+                            <br>
+                            <textarea id="unityBuilder" class="promptTextArea" rows="10"></textarea>
+                            <div id="unityBuilderStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
+                            <br><br>
+                            <button id="unityBuilderButton" class="savePromptButtonClass btn btn-secondary">Get default definition</button>
+                            <button id="unityBuilderSaveButton" class="savePromptButtonClass btn btn-secondary">Save definition</button>
+                            <label id="unityBuilderMessage"></label>
+                        </div>
+                    </div>
+                </div >
+            </div >
             <h2 class="title">PrompTeX Prompt Configuration</h2>
             <div class="card">
                 <div class="card-header card-header bg-dark text-white">Improvement prompts</div>
@@ -31,8 +109,8 @@
                             <textarea id="annotatePrompt" class="promptTextArea" rows="10"></textarea>
                             <div id="annotatePromptStatic" class="promptStaticText" style="background-color: #f5f5f5; padding: 10px; margin-top: 10px; border-radius: 5px;"></div>
                             <br><br>
-                            <button id="annotatePromptButton" class="savePromptButtonClass btn btn-secondary">Get default prompt</button>
-                            <button id="annotatePromptSaveButton" class="savePromptButtonClass btn btn-secondary">Save prompt</button>
+                            <button id="annotatePromptButton" class="savePromptButtonClass btn btn-secondary">Get default definition</button>
+                            <button id="annotatePromptSaveButton" class="savePromptButtonClass btn btn-secondary">Save definition</button>
                             <label id="annotatePromptMessage"></label>
                         </div>
                     </div>
