--- a/app/pages/promptConfiguration.html
+++ b/app/pages/promptConfiguration.html
@@ -25,7 +25,7 @@
                 <div class="card-header card-header bg-dark text-white">Validate</div>
                 <div class="card-body">
                     <div id="validatorContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Validate</b> definition here:</label>
+                        <label>Configure your <b>Validate</b> definition here for the Content Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="validator" class="promptTextArea" rows="3"></textarea>
@@ -38,7 +38,7 @@
                     </div>
                     <hr>
                     <div id="enhancerContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Enhance</b> definition here:</label>
+                        <label>Configure your <b>Enhance</b> definition here for the Content Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="enhancer" class="promptTextArea" rows="3"></textarea>
@@ -50,7 +50,7 @@
                     </div>
                     <hr>
                     <div id="gapFillerContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Gap filling</b> definition here:</label>
+                        <label>Configure your <b>Gap filling</b> definition here for the Content Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="gapFiller" class="promptTextArea" rows="3"></textarea>
@@ -62,7 +62,7 @@
                     </div>
                     <hr>
                     <div id="alternativeProviderContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Alternatives</b> definition here:</label>
+                        <label>Configure your <b>Alternatives</b> definition here for the Content Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="alternativeProvider" class="promptTextArea" rows="3"></textarea>
@@ -74,7 +74,7 @@
                     </div>
                     <hr>
                     <div id="unityBuilderContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Unify</b> definition here:</label>
+                        <label>Configure your <b>Unify</b> definition here for the Content Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="unityBuilder" class="promptTextArea" rows="3"></textarea>
@@ -91,7 +91,7 @@
                 <div class="card-header card-header bg-dark text-white">Validate</div>
                 <div class="card-body">
                     <div id="validatorRhetoricalContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Validate</b> definition here:</label>
+                        <label>Configure your <b>Validate</b> definition here for the Rhetorical Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="validatorRhetorical" class="promptTextArea" rows="3"></textarea>
@@ -103,7 +103,7 @@
                     </div>
                     <hr>
                     <div id="enhancerRhetoricalContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Enhance</b> definition here:</label>
+                        <label>Configure your <b>Enhance</b> definition here for the Rhetorical Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="enhancerRhetorical" class="promptTextArea" rows="3"></textarea>
@@ -115,7 +115,7 @@
                     </div>
                     <hr>
                     <div id="gapFillerRhetoricalContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Gap filling</b> definition here:</label>
+                        <label>Configure your <b>Gap filling</b> definition here for the Rhetorical Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="gapFillerRhetorical" class="promptTextArea" rows="3"></textarea>
@@ -127,7 +127,7 @@
                     </div>
                     <hr>
                     <div id="alternativeProviderRhetoricalContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Alternatives</b> definition here:</label>
+                        <label>Configure your <b>Alternatives</b> definition here for the Rhetorical Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="alternativeProviderRhetorical" class="promptTextArea" rows="3"></textarea>
@@ -139,7 +139,7 @@
                     </div>
                     <hr>
                     <div id="unityBuilderRhetoricalContainer" class="Prompt-Configuration">
-                        <label>Configure your <b>Unify</b> definition here:</label>
+                        <label>Configure your <b>Unify</b> definition here for the Rhetorical Space mode:</label>
                         <div class="form-check">
                             <br>
                             <textarea id="unityBuilderRhetorical" class="promptTextArea" rows="3"></textarea>
