update prompt and fix use of role definitions

--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -27,7 +27,7 @@
           <!-- Left Column - Model Selection -->
           <div class="col-md-6">
             <div class="mb-3">
-              <label for="LLMDropdown">Select your Large Language Model</label>
+              <label for="LLMDropdown">Select your Large Language Model provider</label>
               <select class="form-control" id="LLMDropdown">
                 <option value="anthropic" selected="selected">Anthropic</option>
                 <option value="openAI">OpenAI</option>
