update LLM models

--- a/app/pages/options.html
+++ b/app/pages/options.html
@@ -154,7 +154,7 @@
             </div>
           </div>
         </div>
-        <div>
+        <!--<div>
           <label for="temperatureInput" class="form-label">Set model temperature</label>
           <input
                   type="number"
@@ -169,7 +169,7 @@
           <div class="form-text">
             Temperature controls randomness: 0 = deterministic, 2 = very creative
           </div>
-        </div>
+        </div>-->
         <br>
         <div class="mb-3">
           <label class="form-label">Token Usage</label>
